# opentofu

./: .copywrite.hcl  .devcontainer.json  .gitattributes  .gitignore  .golangci-complexity.yml  .golangci.yml  .goreleaser.yaml  .licensei.cache  .licensei.toml  .releaserc.yaml  .semrelrc  .tfdev  BUGPROCESS.md  BUG_REPORTS.md  BUILDING.md  CHANGELOG.md  CHARTER.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.RELEASE.md  CONTRIBUTING.md  DEBUGGING.md  Dockerfile  Dockerfile.minimal  GOVERNANCE.md  LICENSE  MAINTAINERS  MAINTAINERS.md  MIGRATION_GUIDE.md  Makefile  README.md  RELEASE-FORK.md  RELEASE.md  SECURITY.md  TSC_SUMMARY.md  WEEKLY_UPDATES.md  action.yml  changes.diff  checkpoint.go  codecov.yml  (+23 more)
.github/: CONTRIBUTAI_BLOCK  CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.release/: ci.hcl  release-metadata.hcl
TSC/: 2023-11-02_NOTES.md  2023-12-05_NOTES.md  2023-12-11_NOTES.md  2024-01-07_NOTES.md  2024-01-22_NOTES.md  2024-01-30_NOTES.md  2024-02-17_NOTES.md  2024-02-21_NOTES.md  2024-02-27_NOTES.md  2024-03-06_NOTES.md  2024-04-03_NOTES.md  2024-05-07_NOTES.md  2024-05-21_NOTES.md  2024-06-04_NOTES.md  2024-06-12_NOTES.md  2024-07-02_NOTES.md  2024-07-10_NOTES.md  2024-07-24_NOTES.md  2024-07-30_NOTES.md  2024-08-13_NOTES.md  2024-08-20_NOTES.md  2024-10-01_NOTES.md  2024-10-09_NOTES.md  2024-10-15_NOTES.md  2024-10-22_NOTES.md  (+14 more)
middleware/python-sdk/: README.md  pyproject.toml  setup.py
middleware/python-sdk/src/opentofu_middleware/: __init__.py  server.py  transport.py  types.py  utils.py
(+4930 files in other folders)
